# newactix

./: Cargo.toml
assets/css/: style.css  style1.css
src/: main.rs
src/controller/: category.rs  login.rs  mod.rs  posts.rs
src/controller/admin/: admin_categories.rs  admin_posts.rs  mod.rs  new_post.rs
src/controller/authentication/: login.rs
src/controller/login/: login.rs
src/model/: database.rs  users.rs
templates/: admin.html  admin_categories.html  cat.html  demo.html  edit_category.html  edit_post.html  index.html  login.html  new_category.html  new_post.html  paginated_posts.html  post_category.html  single_post.html
