[package]
name = "newactix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
liquid = "0.26.4"
actix-files = "*"
serde = "1.0"
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
uuid = "0.8"
thiserror = "1.0"
secrecy = { version = "0.8", features = ["serde"] }
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
argon2 = { version = "0.4", features = ["std"] }


